@@ -1,4 +1,5 @@
 0.2:
+- Implemented bilinear scaling in pure SDL mode - Mika
 - Planet surface is now smoothed, from PhracturedBlue
 - Implemented scanlines in pure SDL mode - Mika
 - Star sizes and colors are now correct in solar system, from fOSSiL
